--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "7.3.*",
         "barryvdh/laravel-debugbar": "^3.2",
         "caffeinated/modules": "^6.0",
         "caffeinated/themes": "^7.0",
+        "facuz/laravel-themes": "^3.1",
         "fideloper/proxy": "^4.0",
+        "joedixon/laravel-translation": "^1.0",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0"
     },
