--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "barryvdh/laravel-debugbar": "^3.2",
         "caffeinated/modules": "^6.0",
         "caffeinated/themes": "^7.0",
+        "facade/ignition": "^1.11",
         "facuz/laravel-themes": "^3.1",
         "fideloper/proxy": "^4.0",
         "joedixon/laravel-translation": "^1.0",
